[project]
name = "mushitroom-py"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gpiozero>=2.0.1",
    "luma-core>=2.5.2",
    "luma-lcd>=2.11.0",
    "pillow==12.0.0",
    "rpi-gpio>=0.7.1 ; sys_platform == 'linux'",
    "rpi-lgpio>=0.6 ; sys_platform == 'linux'",
    "spidev>=3.8 ; sys_platform == 'linux'",
]
